# advent-of-code-2024

./: LICENSE  README.md  pyproject.toml
aoc_2024/: day01.ipynb  setup.ipynb
aoc_2024/inputs/: day01.txt
