[tool.poetry]
name = "aoc-2024"
version = "0.1.0"
description = "Advent of Code 2024"
authors = ["Niels van Galen Last <nvangalenlast@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^24.10.0"}
isort = "^5.13.2"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
jupyterlab = "^4.3.1"
jupyterlab-widgets = "^3.0.13"
ipywidgets = "^8.1.5"
ipython = "^8.29.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
